@@ -15,6 +15,7 @@ import com.digitalHouse.beerClub.repository.IUserRepository;
 import com.digitalHouse.beerClub.service.interfaces.IUserService;
 import com.digitalHouse.beerClub.utils.TransformationUtils;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.security.core.Authentication;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
@@ -52,19 +53,19 @@ public class UserServiceImplement implements IUserService {
 
     @Override
     public List<UserDTO> searchAll() {
-        return userRepository.findAll().stream().map(user -> userMapper.converter(user, UserDTO.class)).collect(Collectors.toList());
+        return userRepository.findAll().stream().map(user -> userMapper.converter(user, UserDTO.class)).toList();
     }
 
     @Override
     public List<UserDTO> getAllActiveUsers() {
         // Filtrar usuarios activos
-        List<UserDTO> users = userRepository.findByActiveTrue().stream().map(user -> userMapper.converter(user, UserDTO.class)).collect(Collectors.toList());
+        List<UserDTO> users = userRepository.findByActiveTrue().stream().map(user -> userMapper.converter(user, UserDTO.class)).toList();
         return users;
     }
 
     @Override
     public User findById(Long id) throws NotFoundException {
-        return userRepository.findById(id).orElseThrow(() -> new NotFoundException("User not found with ID: " + id));
+        return userRepository.findById(id).orElseThrow(() -> new NotFoundException("No se encontró el usuario con ID: " + id));
     }
 
     @Override
@@ -115,9 +116,10 @@ public class UserServiceImplement implements IUserService {
         newUser.setSubscriptionDate(getSubscriptionDate());
         newUser.setAddress(address);
         newUser.setSubscription(subscription);
+        newUser.setPassword(passwordEncoder.encode(user.getPassword()));
         User createdUser = userRepository.save(newUser);
 
-        return paymentServiceImplement.savePayment(cardPayment, createdUser);
+        return  paymentServiceImplement.savePayment(cardPayment, createdUser);
     }
 
     @Override
@@ -127,12 +129,14 @@ public class UserServiceImplement implements IUserService {
         userRepository.save(adminUser);
     }
 
-
     @Override
-    public UserDTO updateUser(UserApplicationDTO user, Long id) throws NotFoundException {
+    public UserDTO updateUser(UserApplicationDTO user, Long id, Authentication authentication) throws NotFoundException, ForbiddenException {
         User searchedUser = this.findById(id);
+        if (!authentication.getName().equals(searchedUser.getEmail())) {
+            throw new ForbiddenException("No tienes permisos para actualizar este usuario");
+        }
         if (!searchedUser.isActive()) {
-            throw new NotFoundException("The user is not active and cannot be modified.");
+            throw new NotFoundException("El usuario no está activo y no se puede modificar");
         }
         searchedUser.setFirstName(user.getName());
         searchedUser.setLastName(user.getLastName());
@@ -147,7 +151,7 @@ public class UserServiceImplement implements IUserService {
     public void delete(Long id) throws NotFoundException {
         User user = this.findById(id);
         if (!user.isActive()) {
-            throw new NotFoundException("The user is not active and cannot be deleted.");
+            throw new NotFoundException("El usuario no está activo y no se puede eliminar");
         }
         user.setActive(false);
         userRepository.save(user);
@@ -166,20 +170,25 @@ public class UserServiceImplement implements IUserService {
     }
 
     @Override
-    public void updatePasswordUser(UserAuthRequest user) throws NotFoundException {
-        User searchedUser = userRepository.findByEmail(user.getEmail());
-        if (!searchedUser.isActive()) {
-            throw new NotFoundException("The user is not active.");
+    public void updatePasswordUser(UserAuthRequest user, Authentication authentication) throws NotFoundException, ForbiddenException {
+        User currentUser = userRepository.findByEmail(authentication.getName());
+
+        if (!user.getEmail().equals(currentUser.getEmail())) {
+            throw new ForbiddenException("El email proporcionado no coincide con el del usuario autenticado");
         }
-        searchedUser.setPassword(user.getPassword());
-        userRepository.save(searchedUser);
+
+        if (!currentUser.isActive()) {
+            throw new NotFoundException("El usuario no está activo");
+        }
+        currentUser.setPassword(passwordEncoder.encode(user.getPassword()));
+        userRepository.save(currentUser);
     }
 
     @Override
     public void activateUser(Long id) throws NotFoundException, UserActiveException {
         User user = userRepository.findById(id).orElseThrow(() -> new NotFoundException("User not found with ID: " + id));
         if (user.isActive()) {
-            throw new UserActiveException("The user is active.");
+            throw new UserActiveException("El usuario está activo");
         }
         user.setActive(true);
         userRepository.save(user);
